<resources>
    <string name="app_name">Daftar Mahasiswa</string>
    <string name="name">Nama Lengkap</string>
    <string name="nim">Nim</string>
    <string name="photo">Foto</string>
    <string name="study_program">Program Studi</string>
    <string name="majors">Jurusan</string>
    <string name="acamedic_entry_year">Tahun Masuk Akademik</string>
    <string name="address">Alamat</string>
    <string name="phone_number">Nomor Ponsel</string>
    <string name="place_of_birth">Tempat Lahir</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="religion">Agama</string>
    <string name="blood_group">Golongan Darah</string>

    <string name="descriptions">Ini adalah kunci utama Anda, berlaku selama Anda seorang mahasiswa.</string>

    <string name="email">Email</string>

    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

    <string name="action_list">List View</string>
    <string name="action_grid">Grid View</string>
    <string name="action_card">Card View</string>
    <string name="action_profile">Go to Profile</string>

</resources>