<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tv_photo"
            android:layout_width="125dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_photo"
            android:layout_toRightOf="@id/tv_photo"
            tools:text="@string/name" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/tv_name"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_photo"
            android:layout_toRightOf="@id/tv_photo"
            tools:text="@string/nim" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/tv_photo"
            android:layout_toRightOf="@id/tv_photo"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>