<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="Detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tv_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    app:civ_border_color="#dadce0"
                    app:civ_border_width="1dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    style="@style/TextContent"
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_vpn_key_24"
                        app:tint="@color/blue_800" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAllCaps="true"
                            android:text="@string/nim" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_nim"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nim" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:text="@string/descriptions" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_school_24"
                        app:tint="@color/blue_800" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/study_program" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_study_program"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/study_program" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/majors" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_majors"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/majors" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/acamedic_entry_year" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_acamedic_entry_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/acamedic_entry_year" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_home_24"
                        app:tint="@color/blue_800" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/address" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_local_phone_24"
                        app:tint="@color/blue_800" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/phone_number" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_person_24"
                        app:tint="@color/blue_800" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/place_of_birth" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_place_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/place_of_birth" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/date_of_birth" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/gender" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/religion" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_religion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/religion" />

                        <TextView
                            style="@style/TitleContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/blood_group" />

                        <TextView
                            style="@style/TextContent"
                            android:id="@+id/tv_blood_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/blood_group" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
